--- a/HospitalApp-web/src/main/webapp/BuscarPaciente.xhtml
+++ b/HospitalApp-web/src/main/webapp/BuscarPaciente.xhtml
@@ -6,6 +6,7 @@
       xmlns:f="http://java.sun.com/jsf/core">
 
     <h:form id="buscaPaciente">
+        <p:growl id="growl" showDetail="true"/>
         <div align="center">
             <p:panelGrid columns="3" id="datosPaciente" styleClass="companyHeaderGrid">
                 <p:outputLabel for="Rut" value="Rut: "/>
